--- a/RentalService/Dockerfile
+++ b/RentalService/Dockerfile
@@ -1,9 +1,6 @@
 FROM eclipse-temurin:21-jdk
-
 WORKDIR /app
-
 COPY build/libs/RentalService-0.0.1-SNAPSHOT.jar app.jar
-
+RUN jar tf app.jar | grep TestController || true
 EXPOSE 8080
-
-CMD ["java", "-Xmx300m", "-Xms300m", "-XX:TieredStopAtLevel=1", "-noverify", "-jar", "app.jar"]
+CMD ["java","-jar","app.jar"]
