--- a/RentalService/src/main/resources/application.properties
+++ b/RentalService/src/main/resources/application.properties
@@ -1,9 +1,7 @@
+
+
+#customer.service.url=http://prenomservice
+
+
 server.port=8080
-spring.application.name=rental-service
-
-customer.service.url=http://prenomservice
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+customer.service.url=http://prenomservice:80
